--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/8/9/10/10.1/11/12/styles.css
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/8/9/10/10.1/11/12/styles.css
@@ -10,7 +10,7 @@ a, a:hover {
 }
 
 body {
-   background-color: #05150c;
+   background-color: black;
 }   
 
 .container{
@@ -146,54 +146,52 @@ body {
 }
 
 header {
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100vh;
-   padding: 30px 100px;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   font-family: Poppins, sans-serif;
-   z-index: 10000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.875rem 6.25rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Poppins, sans-serif;
+    z-index: 10000;
 }
 
 header .logo {
-   color: #fff;
-   font-weight: 700;
-   text-decoration: none;
-   font-size: 25px;
-   text-transform: uppercase;
-   letter-spacing: 5px;
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1.563rem;
+    text-transform: uppercase;
+    letter-spacing: 0.313rem;
 
 }
 
 header ul{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   position: absolute;
-   left: 950px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
 header ul li {
-   list-style: none;
-   margin-left: 20px;
+    list-style: none;
+    margin-left: 1.25rem;
 }
 
 header ul li a {
      text-decoration: none;
-     padding: 6px 15px;
+     padding: 0.375rem 0.938rem;
      color: #fff;
-     border-radius: 20px;
+     border-radius: 1.25rem;
 
 }
 
 header ul li a:hover,
 header ul li a.active {
-   background: #fff;
-   color: #2b1055;
+    background: #fff;
+    color: #2b1055;
 }
 
 
