--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/styles.css
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/6/7/styles.css
@@ -14,7 +14,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	position: relative;
-	top: 60px;
+	top: 100px;
 	left: 700px;
 	font-size: 45px;
 }
@@ -48,7 +48,7 @@ body{
 	width: 768px;
 	border: 10px solid black;
 	position: relative;
-	top: -165px;
+	top: -110px;
 }
 
 .image-container img {
@@ -70,40 +70,53 @@ body{
 
 }
 
-nav {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	min-height: 8vh;
-	width: 1440px;
-	background-color: #5d4954;
-	font-family: 'Poppins', sans-serif;
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    padding: 1.875rem 6.25rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Poppins, sans-serif;
+    z-index: 10000;
+    background: black;
 }
 
-.logo {
-	color: rgb(226, 226, 226);
-	text-transform: uppercase;
-	letter-spacing: 5px;
-	font-size: 20px;
-}
-
-.nav-links {
-	display: flex;
-	justify-content: space-around;
-	width: 30%;
-	z-index: 10000;
-
-}
-
-.nav-links li{
-	list-style: none;
+header .logo {
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1.563rem;
+    text-transform: uppercase;
+    letter-spacing: 0.313rem;
 
 }
 
-.nav-links a{
-	color: rgb(226, 226, 226);
-	text-decoration: none;
-	letter-spacing: 3px;
-	font-weight: bold;
-	font-size: 14px;
+header ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+header ul li {
+    list-style: none;
+    margin-left: 1.25rem;
+}
+
+header ul li a {
+     text-decoration: none;
+     padding: 0.375rem 0.938rem;
+     color: #fff;
+     border-radius: 1.25rem;
+
+}
+
+header ul li a:hover,
+header ul li a.active {
+    background: #fff;
+    color: #2b1055;
 }
