--- a/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/styles.css
+++ b/Final PItch/1/Pages/1/1.4/1.5/1.6/2/4/5/styles.css
@@ -1,146 +1,179 @@
-* {
-	margin: 0px;
-	padding: 0px;
-	box-sizing: border-box;
+  * {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 html,
 body {
     box-sizing: border-box;
     margin: 0;
-    height: 100%;
     background-color: black;
-    display: flex;
     font-family: sans-serif;
-
 }
 
 main {
-	margin-left: 9rem;
-	padding: 1rem;
+    margin-left: 9rem;
+    padding: 1rem;
 }
 
 
 .text h1 {
-	padding: 20px;
+    padding: 1.25rem;
     color: white;
-    font-size: 70px;
-    position: absolute;
-    left: 810px;
+    font-size: 4em;
+    position: relative;
     white-space: nowrap;
-    top: 130px;
+    top: 2rem;
+    left: 10rem;
+
 }
 
 .move {
-	padding: 20px;
+    padding: 1.25rem;
     color: white;
-    font-size: 13px;
+    font-size: 0.813rem;
     font-style: italic;
-    position: absolute;
-    left: 880px;
-    white-space: nowrap;
-    top: 215px;
-    text-align: center;
+    position:relative;
+    left: 10rem;
 }
 
 .paragraph {
     color: white;
-    min-width: 50px;
-    height: 50px;
-    font-size: 15px;
-    position: absolute;
-    top: 280px;
-    left: 750px;
+    font-size: 0.938rem;
+    position: relative;
     vertical-align: middle;
-    width: 550px;
     text-align: center;
+    top: 2rem;
+    left: 10rem;
+
 }
 
 .image-container {
-	display: flex;
-	height: 1100%;
-	width: 1100%;
-	max-width: 1100%;
-	position: relative;	
-	left: -400px;
-	webkit-perspective: 1500px; 
-	perspective: 1500px;
-	top: 405px;
-	
+    display: inline-block;
+    height: 48%;
+    width: 48%;
+    min-width: 0%;
+    min-height: 0%;
+    max-width: 200%;
+    position: relative;
+    top: 5rem;
+    left: -6rem;
 }
 
 .canvas {
-	width: auto;
-	max-height: 100%;
-	max-width: 100%;
-	display: block;
-	margin: auto;
+    width: auto;
+    max-height: 200%;
+    max-width: 200%;
+    display: block;
+    margin: auto;
 }
 .loading-screen {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background:  black;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	visibility: visible;
-	opacity: 1;
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	line-height: 40px;
-	transition: 0.25s ease all 0.75s;
-	color: #999;
-	transform: translateZ(50px);
+    position: absolute;
+    width: 300%;
+    height: 100%;
+    background:  black;
+    top: 0rem;
+    bottom: 0;
+    left: -8rem;
+    right: 0;
+    visibility: visible;
+    opacity: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    line-height: 2.5rem;
+    transition: 0.25s ease all 0.75s;
+    color: #999;
+    transform: translateZ(50rem);
 }
 .loading-screen.hidden {
-	visibility: hidden;
-	opacity: 0;
+    visibility: hidden;
+    opacity: 0;
 }
 
-nav {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	min-height: 8vh;
-	height: 8vh;
-	width: 1440px;
-	background-color: #5d4954;
-	font-family: 'Poppins', sans-serif;
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.875rem 6.25rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Poppins, sans-serif;
+    z-index: 10000;
 }
 
-.logo {
-	color: rgb(226, 226, 226);
-	text-transform: uppercase;
-	letter-spacing: 5px;
-	font-size: 20px;
-	position: relative;
-	left: 100px;
-}
-.nav-links {
-	display: flex;
-	justify-content: space-around;
-	width: 30%;
-	position: relative;
-	left: 1100px;
-}
-
-.nav-links li{
-	list-style: none;
+header .logo {
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1.563rem;
+    text-transform: uppercase;
+    letter-spacing: 0.313rem;
 
 }
 
-.nav-links a{
-	color: rgb(226, 226, 226);
-	text-decoration: none;
-	letter-spacing: 3px;
-	font-weight: bold;
-	font-size: 20px;
+header ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
+header ul li {
+    list-style: none;
+    margin-left: 1.25rem;
+}
 
+header ul li a {
+     text-decoration: none;
+     padding: 0.375rem 0.938rem;
+     color: #fff;
+     border-radius: 1.25rem;
+
+}
+
+header ul li a:hover,
+header ul li a.active {
+    background: #fff;
+    color: #2b1055;
+}
+
+
+.content-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 93.75rem;
+    margin: 0 auto;
+    padding: 0 3.125rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60rem;
+}
+
+
+.content-wrapper .section-content {
+    width: 100%;
+    display: inline-block;
+    padding-left: 6.25rem;
+    text-align: center;
+}
+
+.image-container img {
+    max-height: 37.5rem;
+    
+}
+
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px)
+@media (min-width: 641px)
+}
