--- a/Final PItch/styles.css
+++ b/Final PItch/styles.css
@@ -12,54 +12,52 @@ body {
    width: 100vh;
 }
 header {
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100vh;
-   padding: 30px 100px;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   font-family: Poppins, sans-serif;
-   z-index: 10000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.875rem 6.25rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Poppins, sans-serif;
+    z-index: 10000;
 }
 
 header .logo {
-   color: #fff;
-   font-weight: 700;
-   text-decoration: none;
-   font-size: 25px;
-   text-transform: uppercase;
-   letter-spacing: 5px;
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1.563rem;
+    text-transform: uppercase;
+    letter-spacing: 0.313rem;
 
 }
 
 header ul{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   position: absolute;
-   left: 950px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
 header ul li {
-   list-style: none;
-   margin-left: 20px;
+    list-style: none;
+    margin-left: 1.25rem;
 }
 
 header ul li a {
      text-decoration: none;
-     padding: 6px 15px;
+     padding: 0.375rem 0.938rem;
      color: #fff;
-     border-radius: 20px;
+     border-radius: 1.25rem;
 
 }
 
 header ul li a:hover,
 header ul li a.active {
-   background: #fff;
-   color: #2b1055;
+    background: #fff;
+    color: #2b1055;
 }
 
 .card {
@@ -169,6 +167,25 @@ header ul li a.active {
     background-size: 100% 100%;
     border-radius: 8px;
     transition: 1s;
+}
+
+.content-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 93.75rem;
+    margin: 0 auto;
+    padding: 0 3.125rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60rem;
+}
+
+.content-wrapper {
+    width: 100%;
+    display: inline-block;
+    padding-left: 6.25rem;
+    text-align: center;
 }
 
 .card:hover .photo{
